          - inject [SurgicalPodWeaver] in develop prereqs, if selected via the
            surgical_podweaver option
          - include placeholder for keyword declarations in minted modules
          - xt/ tests are now once again run after t/
          - engage maximum fallbackiness!  default installers now
            [ModuleBuildTiny::Fallback], [MakeMaker::Fallback]

0.064     2014-05-21 16:56:30Z
          - one more .latest symlink fix
          - add [CheckIssues]
          - drop automatic develop prereq on Dist::Zilla <what I have>

0.063     2014-05-11 17:53:12Z
          - really fix failing tests this time (from v0.060)
          - fix updating of .ackrc file and .latest symlink in various build
            scenarios (from v0.061)

0.062     2014-05-08 17:02:13Z
          - remove using plugins in tests that will cause the test build to
            fail if users don't have develop prereqs installed

0.061     2014-05-04 21:28:33Z
          - fix ln flags for linux
          - fix filefinders used in no-tabs tests

0.060     2014-05-03 22:52:01Z
          - fix adjustment of existing .latest symlink at build time
          - added use of [EnsurePrereqsInstalled], to check ; authordeps are
            satisfied
          - Dist::Zilla::Plugin::BlockRelease (used by airplane mode) has been
            broken out into its own distribution
          - removed unnecessary use of StopWords in this dist, dists being
            built and dists being minted

0.059     2014-04-26 22:32:12Z
          - revisions to and fixes for generated CONTRIBUTING document

0.058     2014-04-19 05:38:04Z
          - minimum perl version really really fixed now
          - drop [Test::UnusedVars] - too many false positives; perl-critic is
            better suited to address these sorts of issues
          - Makefile.PL now checks for 'git' command, so we can get NA reports
            for every smoker that tried to look at us (before attempting to