@@ -9,6 +9,8 @@ Revision history for {{$dist->name}}
           - xt/ tests are now once again run after t/
           - engage maximum fallbackiness!  default installers now
             [ModuleBuildTiny::Fallback], [MakeMaker::Fallback]
+          - skip running after-build shell commands on systems with no bash,
+            to avoid failing tests on various architectures
 
 0.064     2014-05-21 16:56:30Z
           - one more .latest symlink fix
